Exercício sobre composição